@@ -1,3 +1,9 @@
+2006-06-17 20:39 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GormCore/GormNibWrapperLoader.m: Remove resizing change from
+	loadFileWrapper:withDocument: since it was moved to NSWindowTemplate
+	nibInstantiate.
+
 2006-06-17 12:45 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GormCore/GormInternalViewEditor.m: Removed previous resize
